packages/es5-ext@4d7f742/test/error/%23/throw.js
"use strict";module.exports=function(r,t){var c=new Error;try{r.call(c)}catch(e){t(e,c)}};